deploy/base/openehr-nodes/vitala/federation-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitala-federation-rest
  namespace: dh-health
  labels:
    app: vitala-federation-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitala-federation-rest
  template:
    metadata:
      labels:
        app: vitala-federation-rest
    spec:
      containers:
        - name: vitala-federation-rest
          image: registry.prod.dh.unimaas.nl/docker-health/federation-rest:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs
              mountPath: /code/logs/vitala
              subPath: vitala/federation-rest
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: log-pvc
