deploy/base/openehr-nodes/vitala/federation-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitala-federation-rest
  namespace: dh-health
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: vitala-federation-rest
